src/objects/ADvendio__RTBAccount__c.object
<CustomObject>
    <description>PA web service writes data to this object.</description>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account to match PA Accounts with Accounts.</description>
        <inlineHelpText>Lookup to Account to match RTB Accounts with Accounts.</inlineHelpText>
        <label>Account (deprecated)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PA Accounts (deprecated)</relationshipLabel>
        <relationshipName>RTBAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <description>PA web service writes to this field.</description>
        <inlineHelpText>RTB web service writes to this field.</inlineHelpText>
        <label>AdServer Login (deprecated)</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>PA Accounts (deprecated)</relationshipLabel>
        <relationshipName>RTBAccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalId__c</fullName>
        <description>PA web service writes the external ID to this field.</description>
        <inlineHelpText>RTB web service writes the external ID to this field.</inlineHelpText>
        <label>External ID (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__FullName__c</fullName>
        <description>PA web service writes full name to this field.</description>
        <inlineHelpText>RTB web service writes full name to this field.</inlineHelpText>
        <label>Full Name (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__RTBEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PA web service writes to this field and indicates that the demand partner is PA-enabled.</description>
        <inlineHelpText>RTB web service writes to this field and indicates that the demand partner is RTB-enabled.</inlineHelpText>
        <label>PA enabled (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>PA web service writes the type to this field.</description>
        <inlineHelpText>RTB web service writes the type to this field.</inlineHelpText>
        <label>Type (deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertiser</fullName>
                </value>
                <value>
                    <fullName>Demand Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>PA web service writes a generated unique identifier to this field.</description>
        <externalId>true</externalId>
        <inlineHelpText>RTB web service writes a generated unique identifier to this field.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AccountRecordType__c</fullName>
        <description>Datensatztyp des Accounts.
Muss bei Advertisern Werbetreibender sein!
Muss bei Demanpartnern Agentur sein!</description>
        <formula>ADvendio__Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Datensatztyp des Accounts.
Muss bei Advertisern Werbetreibender sein!
Muss bei Demanpartnern Agentur sein!</inlineHelpText>
        <label>Account-Typ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_RevenueAdvertiser__c</fullName>
        <description>Summe Nettoumsatz AJ für Typ Advertiser</description>
        <inlineHelpText>Summe Nettoumsatz AJ für Typ Advertiser</inlineHelpText>
        <label>Nettoumsatz AJ (Advertiser)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_RevenueDemandPartner__c</fullName>
        <description>Summe Nettoumsatz AJ für Typ Demand Partner</description>
        <inlineHelpText>Summe Nettoumsatz AJ für Typ Demand Partner</inlineHelpText>
        <label>Nettoumsatz AJ (Demand Partner)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Revenue__c</fullName>
        <description>Nettoumsatz AJ</description>
        <formula>CASE(TEXT(ADvendio__Type__c),
&apos;Advertiser&apos;, SomDig_RevenueAdvertiser__c ,
&apos;Demand Partner&apos;, SomDig_RevenueDemandPartner__c ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nettoumsatz AJ</inlineHelpText>
        <label>Nettoumsatz AJ</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PA Account (deprecated)</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServerLogin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Advertiser</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>SomDig_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__RTBAccount__c.ADvendio__YIELDLAB</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Advertiser</value>
        </filters>
        <label>Advertiser</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Advertiser_Pflege</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Revenue__c</columns>
        <columns>ADvendio__Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__RTBAccount__c.ADvendio__YIELDLAB</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Advertiser</value>
        </filters>
        <filters>
            <field>ADvendio__Account__c</field>
            <operation>equals</operation>
            <value>Yieldlab AG</value>
        </filters>
        <filters>
            <field>SomDig_Revenue__c</field>
            <operation>greaterOrEqual</operation>
            <value>EUR 1000</value>
        </filters>
        <label>Advertiser Pflege</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__RTBAccount__c.ADvendio__YIELDLAB</value>
        </filters>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>DemandPartner</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>SomDig_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__RTBAccount__c.ADvendio__YIELDLAB</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Demand Partner</value>
        </filters>
        <label>DemandPartner</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>DemandPartner_Pflege</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>SomDig_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__RTBAccount__c.ADvendio__YIELDLAB</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Demand Partner</value>
        </filters>
        <filters>
            <field>ADvendio__Account__c</field>
            <operation>equals</operation>
            <value>Yieldlab AG</value>
        </filters>
        <filters>
            <field>SomDig_Revenue__c</field>
            <operation>greaterOrEqual</operation>
            <value>EUR 1000</value>
        </filters>
        <label>DemandPartner Pflege</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>PAAccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PA Accounts (deprecated)</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADEX</fullName>
        <active>true</active>
        <description>This record type should be used to store data for Ad server DoubleClick Ad Exchange</description>
        <label>ADEX</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store data for Ad server YIELDLAB</description>
        <label>YIELDLAB</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>